@@ -1,8 +1,8 @@
 Package: DiffBind
 Type: Package
-Version: 1.9.13
+Version: 1.9.14
 Title: Differential Binding Analysis of ChIP-Seq peak data
-Date: 2014-03-12
+Date: 2014-03-21
 Author: Rory Stark<rory.stark@cruk.cam.ac.uk>, Gordon Brown
         <gordon.brown@cruk.cam.ac.uk>
 Maintainer: Rory Stark<rory.stark@cruk.cam.ac.uk>
